# 3DVEMforMHD

./: CMakeLists.txt  config.sh
src/: AssembleAndLinearSolve.cc  CMakeLists.txt  FirstOrderPoisson.cc  MHD.cc  ModifiedTestMain.cc  PDE_ElectroMagMHD.cc  PDE_ElectroMagMHD.hh  PDE_FirstOrderPoisson.cc  PDE_SecondOrderPoisson.cc  PDE_Test.cc  PDE_Test.hh  PDE_TestMHD.cc  PDE_TestMHD.hh  PolynomialByCoordinates.hh  SecondOrderPoisson.cc  TestMain.cc  TreeOperatorTest.cc  elasticitytest.cc  header.hh  main.cc
src/summertest/: CMakeLists.txt  PDE_FirstOrderPoisson.cc  PDE_FirstOrderPoisson.hh  PDE_SecondOrderPoisson.cc  PDE_SecondOrderPoisson.hh  PDE_Test.hh  SecondOrderPoisson.cc  TestMain.cc  elasticitytest.cc
